# vrf-noir

./: .env  .gitignore  Cargo.toml  flake.nix  readme.md
circuit/: Nargo.toml  Prover.toml  Verifier.toml
circuit/proofs/: vrf.proof
circuit/src/: hash.nr  main.nr  secp256k1.nr
example/: .env  Cargo.toml
example/src/: main.rs
vrf-rust/: .env  Cargo.toml
vrf-rust/src/: lib.rs  nargo.rs  types.rs
