[package]
name = "vrf-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tempfile = "3.8.1"
hex = "0.4"
serde = {version="1.0.193", features=["derive"]}
serde_json = "1.0.108"
regex = "1.10.2"